--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^4.36.1",
     "@types/react-datepicker": "^6.2.0",
+    "@xyflow/react": "^12.6.4",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.9.4",
@@ -39,7 +40,6 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
-    "react-flow-renderer": "^10.3.17",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^6.30.0",
     "react-split": "^2.0.14",
